# tyrminell

./: Cargo.toml  README.md
examples/: colors.rs  combination.rs  effects.rs  weights.rs
src/: csi.rs  fe_seq.rs  helpers.rs  lib.rs  sgr.rs
