[package]
name = "tyrminell"
description = "Crate for working with terminal formatting with minimal allocations"
authors = ["[aka]bomb"]
license = "MPL-2.0"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/b0mbie/tyrminell"
keywords = ["cli", "terminal"]

[features]
# Include helpers for terminal formatting.
helpers = []
# Enable `FeSeq::write_to`, which uses `std::io`.
std = []
default = ["helpers"]
